--- a/hello-word-2201681061/src/app/app.component.css
+++ b/hello-word-2201681061/src/app/app.component.css
@@ -1,20 +1,16 @@
-details summary {
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 1.2em;
+h1{
     font-family: Arial, sans-serif; 
+    font-size: 1.5em;
     color: #333; 
-}
-
-details summary {
     background-color: #79bbf8; 
-    padding: 10px; /* Добавяме padding за да подчертаем фона */
+    padding: 10px; 
+    margin-bottom: 0;
 }
 
 p {
     background-color:   #cfdbe6;
-    font-size: 1em;
-    padding: 20px;
+    font-size: 1.2em;
+    padding: 10px 0px 10px 10px;
     margin: 0px;
 }
 
